# cwm

./: .commitmsg  .gitignore  md2pdf.py  md2pdf_2col.py  mems_q_analysis.py  pyproject.toml  readme.md  requirements.txt  scaling_analysis.py  scaling_analysis2.py  verify_v11.py
analysis/: __init__.py  comparison.py  delay_embedding.py  export.py  plotting.py
companion/: breadboard_layout_v2.html  breadboard_layout_v3.html  dds_wiring_guide.html  experiment_guide.html  experiment_guide.md  experiment_guide_2col.html  figures  letter_to_scranton.html  letter_to_scranton.md  no_perfboard_breadboard_layout.html  temporal_reservoir_wiring.html  v3_relay_wiring.html  video_script.md
docs/: CONTRIBUTING.md  HANDOFF_S4.md  LAB_DIARY.md  PROTOCOLS.md  REPRESENTATION_HYPOTHESIS.md  ROADMAP.md  SIDEBARS.md  WATER_COOLER_SUMMARY.md  lab_diary_20260407.md  lab_diary_20260408.md  lab_diary_20260409.md  lab_diary_20260416.md  lab_diary_20260417.md  lab_diary_20260418.md  lab_diary_20260423.md  lab_diary_20260424.md  lab_diary_20260501.md  lab_diary_20260506.md  s22_thoughts.md
experiments/: __init__.py  exp01_mode_persistence.py  exp02_zim_damping.py  exp03_dilatancy_tamper.py  exp04_thermal_stability.py  exp05_geometry_invariance.py  exp06_associative_recall.py  exp07_nearest_neighbor.py  exp08_boolean_compute.py  exp09_reservoir_classify.py  exp10_forward_pass.py  exp11_hopfield_recall.py
notebooks/: 01_claims_validation.ipynb  02_1d_resonator.ipynb  03_thermal_analysis.ipynb  04_sensitivity_analysis.ipynb  05_interference_recall.ipynb  06_ferrofluid_characterization.ipynb  (+7 more)
(+946 files in other folders)
